# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = pwm_lightness
description = A tiny library to calculate CIE 1931 lightness tables for eyeball friendly PWM LED brightness.
version = 1.1.0beta1
license = Apache 2.0
license_files = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/gpshead/pwm_lightness
author = Gregory P. Smith
author_email = greg@krypto.org
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CircuitPython
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: MicroPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.6
py_modules = pwm_lightness

[bdist_wheel]
universal = 1

[sdist]
formats = gztar
